[tool.poetry]
name = "onesearch-mediaconvert-sam"
version = "0.1.0"
description = ""
authors = ["ricepotato <ricepotato40@gmail.com>"]
readme = "README.md"
packages = [{include = "onesearch_mediaconvert_sam"}]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.28.68"
requests = "^2.31.0"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
